Fix positioning of home screen on tablet

--- a/src/targets/stGiles/styles/components/hero-slider.less
+++ b/src/targets/stGiles/styles/components/hero-slider.less
@@ -136,7 +136,7 @@ hero-slider {
 }
 @media only screen and @large-mobile-min and @tablet-portrait-max {
   hero-slider {
-    height: 300px;
+    height: 100vh;
     margin-top: 0;
     //margin-top: 60px;
     .slider-controls {
